<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="es.applique.and_destiny.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aries"
                    android:id="@+id/btn_aries"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taurus"
                    android:id="@+id/btn_taurus"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gemini"
                    android:id="@+id/btn_gemini"
                    android:onClick="displaySignProfile" />
            </TableRow>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancer"
                    android:id="@+id/btn_cancer"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leo"
                    android:id="@+id/btn_leo"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/virgo"
                    android:id="@+id/btn_virgo"
                    android:onClick="displaySignProfile" />
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/libra"
                    android:id="@+id/btn_libra"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scorpio"
                    android:id="@+id/btn_scorpio"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sagittarius"
                    android:id="@+id/btn_sagittarius"
                    android:onClick="displaySignProfile" />
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/capricorn"
                    android:id="@+id/btn_capricorn"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aquarius"
                    android:id="@+id/btn_aquarius"
                    android:onClick="displaySignProfile" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pisces"
                    android:id="@+id/btn_pisces"
                    android:onClick="displaySignProfile" />
            </TableRow>
        </TableRow>

    </TableLayout>
</RelativeLayout>
